fix z-index

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -54,6 +54,10 @@ button {
   -webkit-box-orient: vertical;
 }
 
+.lbd-toast-z-index {
+  z-index: 9999999 !important;
+}
+
 .prevent-pointer-events {
   pointer-events: none;
 }
